Fixed Title Spacing

--- a/src/App.css
+++ b/src/App.css
@@ -331,7 +331,7 @@
 }
 
 .cardTitle {
-  margin: 5px 0 0;
+  margin: 0px 0 0;
   font-size: 19px;
   line-height: 1.25;
   letter-spacing: -0.01em;
@@ -342,7 +342,7 @@
 }
 
 .cardDesc {
-  margin: 8px 0 0;
+  margin: 9px 0 0;
   font-size: 14px;
   line-height: 1.35;
   color: rgba(255, 255, 255, 0.72);
